LiveNBT v0.3.0 — Linux dedicated-server support
Run the same agent inside a vanilla Minecraft 26.2 dedicated server (-javaagent or
dynamic attach) and edit it remotely from the Windows app: every online player, their
inventories, and all world data, over the LAN.

- Dedicated-server support via a bootstrap classloader bridge for the server's isolated
  bundler loader; tick/stop weave placement fixed and verified against the 26.2 client and
  server jars; agent failures degrade to "editing disabled" instead of crashing the game.
- App: connect by IP; multi-player servers show the online count instead of auto-loading an
  arbitrary player; IPv6 hosts handled; switching servers drops the previous tree; port validation.
- Token config file created owner-only (0600) on Linux; README documents LAN-scoped binding
  and SSH-tunnel guidance for internet-facing hosts.

See CHANGELOG.md for the full list.